--- a/Views/DangKyXetTuyenKhac/DanhGia.cshtml
+++ b/Views/DangKyXetTuyenKhac/DanhGia.cshtml
@@ -185,7 +185,7 @@
                                                         <label for="select_namtn" class="col-form-label">Thang điểm:</label>
                                                     </div>
                                                     <div class="col-8">
-                                                        <input id="Dkxt_TongDiem" type="number" class="form-control" placeholder="Thang điểm" value="" disabled/>
+                                                        <input id="Dkxt_TongDiem" type="number" class="form-control" placeholder="Thang điểm" value="" disabled />
                                                         <span id="Dkxt_TongDiem_Error" class="small mb-1 text-danger"></span>
                                                     </div>
                                                 </div>
@@ -350,6 +350,7 @@
                 <div class="modal-body">
                     <span>Bạn chắc chắn nguyện vọng này dữ liệu này?</span>
                     <input id="key_delete_dkxt_id" type="hidden" />
+                    <input id="key_delete_dkxt_tohop" type="hidden" />
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-secondary" type="button" data-bs-dismiss="modal" onclick="deleteRecordCancel()">Hủy</button>
@@ -615,13 +616,13 @@
                 else {
                     $.each(result_all, function (i, result) {
                         _output += '<tr>' +
-                            '<td style="vertical-align: middle !important "> NV' + result.Dkxt_NguyenVong + "&nbsp;" + `<button class="btn btn-outline-primary btn-sm" onclick="upData(${result.Dkxt_ID})" ${i == 0 ? "disabled" : ''}>  &#8743;</button>&nbsp;<button  class="btn btn-outline-primary btn-sm" onclick="downData(${result.Dkxt_ID})" ${i == result_all.length - 1 ? "disabled" : ""}> &#8744;</button>  </td>` +
+                            '<td style="vertical-align: middle !important "> NV' + result.Dkxt_NguyenVong + "&nbsp;" + `<button class="btn btn-outline-primary btn-sm" onclick="upData(${result.Dkxt_ID}, '${result.Dkxt_ToHopXT}')" ${i == 0 ? "disabled" : ''}>  &#8743;</button>&nbsp;<button  class="btn btn-outline-primary btn-sm" onclick="downData(${result.Dkxt_ID}, '${result.Dkxt_ToHopXT}')" ${i == result_all.length - 1 ? "disabled" : ""}> &#8744;</button>  </td>` +
                             '<td style="vertical-align: middle !important "> ' + result.Nganh_All.Nganh_GhiChu + ' </td>' +
                             '<td style="vertical-align: middle !important; text-align:center; ">' + result.Dkxt_DonViToChuc + '</td>' +
                             '<td style="vertical-align: middle !important; text-align:center; ">' + result.Dkxt_ToHopXT + '</td>' +
                             '<td style="vertical-align: middle !important; text-align:center; ">' + result.Dkxt_KetQuaDatDuoc + "/" + result.Dkxt_TongDiem.toFixed(2) + '</td>' +
                             '<td style="vertical-align: middle !important; text-align:center; ">' + result.Dkxt_NgayDuThi + '</td>' +
-                            '<td style="text-align: center; vertical-align: middle !important ">' + `<button class="btn btn-outline-danger btn-sm" onclick="deleteRecord(${result.Dkxt_ID})"}>Xoá</button>` + '</td>' +
+                            '<td style="text-align: center; vertical-align: middle !important ">' + `<button class="btn btn-outline-danger btn-sm" onclick="deleteRecord(${result.Dkxt_ID}, '${result.Dkxt_ToHopXT}')"}>Xoá</button>` + '</td>' +
                             '</tr>'
                     });
                 }
@@ -825,16 +826,18 @@
         });
     }
 
-    function deleteRecord(_dkxt_id) {
+    function deleteRecord(_dkxt_id, ToHop) {
         $('#modal_tb_xoa').modal('show');
         $('#key_delete_dkxt_id').val(_dkxt_id);
+        $('#key_delete_dkxt_tohop').val(ToHop);
     }
 
     function deleteRecordConfirmed() {
         let data = {
             idDkxt: $('#key_delete_dkxt_id').val(),
-            MaToHop: $('#Dkxt_ToHopXT').val()
+            MaToHop: $('#key_delete_dkxt_tohop').val()
         };
+        console.log(data)
         $.ajax({
             url: "/DangKyXetTuyenKhac/Delete",
             data: JSON.stringify(data),
@@ -860,6 +863,7 @@
     function deleteRecordCancel() {
         $('#modal_tb_xoa').modal('hide');
         $('#key_delete_dkxt_id').val('');
+        $('#key_delete_dkxt_tohop').val('');
     }
 
     function bt_Update_on_table_Click(_dkxt_id) {
@@ -893,8 +897,8 @@
         });
     });
 
-    function upData(value) {
-        var obj = { idDkxt: value, MaToHop: $('#Dkxt_ToHopXT').val() };
+    function upData(value, ToHop) {
+        var obj = { idDkxt: value, MaToHop: ToHop };
         $.ajax({
             url: '/DangKyXetTuyenKhac/upData',
             type: 'POST',
@@ -914,8 +918,8 @@
         });
     }
 
-    function downData(value) {
-        var obj = { idDkxt: value, MaToHop: $('#Dkxt_ToHopXT').val() };
+    function downData(value, ToHop) {
+        var obj = { idDkxt: value, MaToHop: ToHop };
         $.ajax({
             url: '/DangKyXetTuyenKhac/downData',
             type: 'POST',
